add docker compose

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-DB.HOST=localhost
-DB.PORT=3306
-DB.NAME=library
-DB.USER=postgres
-DB.PASSWORD=postgres
-DB.LOGGING=false
+APP_HOST=localhost
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=library
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_LOGGING=false
