--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-DB.HOST=localhost
-DB.PORT=3306
-DB.NAME=library
-DB.USER=postgres
-DB.PASSWORD=postgres
-DB.LOGGING=true
+APP_HOST=localhost
+DB_HOST=localhost
+DB_PORT=3306
+DB_NAME=library
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_LOGGING=true
