--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@fastify/rate-limit": "^10.2.2",
     "@fastify/swagger": "^9.4.0",
     "@fastify/swagger-ui": "^5.2.0",
     "class-transformer": "^0.5.1",
