--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - APP_HOST=localhost
+      - APP_HOST=0.0.0.0
       - DB_HOST=postgres
       - DB_NAME=library
       - DB_USER=postgres
